--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
+* {
+  margin: 0px;
+  padding: 0px;
+}
+.container {
+  background-color: rgb(46, 46, 168);
+  color: white;
+  box-sizing: border-box;
+  padding: 0px 100px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container > h1 {
+  font-family: 'Courier New', Courier, monospace;
+  color: azure;
+  margin-bottom: 15px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.photo-container {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  margin: 10px 30px;
+  border: 2px solid rgb(104, 100, 100);
+  border-radius: 3px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 10px;
+}
+.photos {
+  height: 100px;
+  object-fit: cover;
+}
+.btn {
+  padding: 10px 20px;
+  margin: 10px;
+  background-color: rgb(18, 18, 44);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  cursor: pointer;
+  border: none;
+  border-radius: 8px;
 }
